feat: implement distributed security, trader management, and subsidy rejection
- Added SecurityConfig and JWT filters to all microservices
- Implemented Trader registration and profile management (backend + frontend)
- Added subsidy disbursement rejection with reason tracking and DB migration
- Refined frontend auth flow and microservice connection logic
- Updated docker-compose for unified service orchestration